objects/AW_EnvelopeRole__c.object
<CustomObject>
    <description>A junction object for displaying the different signatories on the Envelopes Page</description>
    <fields>
        <fullName>AW_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be used to look up to a Contact field to which the Envelope relates to</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Envelope Roles (Contact)</relationshipLabel>
        <relationshipName>Envelope_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_Email__c</fullName>
        <description>Used for the email address for the envelope role signatory</description>
        <formula>AW_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Envelope__c</fullName>
        <description>This is the master-detail relationship field for the Envelope object</description>
        <label>Envelope</label>
        <referenceTo>AW_Envelope__c</referenceTo>
        <relationshipLabel>Envelope Roles</relationshipLabel>
        <relationshipName>Envelope_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AW_Mobile__c</fullName>
        <description>Used for the mobile number of the envelope role signatory</description>
        <formula>AW_Contact__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <label>Envelope Role</label>
    <nameField>
        <displayFormat>ER-{00000000}</displayFormat>
        <label>Role Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Envelope Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>